Invisible formatting fixes Unnecessary picture-control element was in the way of being able to target the pic

--- a/css/elements.css
+++ b/css/elements.css
@@ -1011,15 +1011,6 @@ td {
   margin-bottom: 0.25em;
 }
 
-.pic-fullscreen-controls {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-}
-
 .pic-fullscreen-prev {
   position: absolute;
   top: 50%;
@@ -1032,6 +1023,7 @@ td {
   cursor: pointer;
   width: 20%;
   height: 100%;
+  z-index: 4;
 }
 
 .pic-fullscreen-next {
@@ -1046,6 +1038,7 @@ td {
   cursor: pointer;
   width: 20%;
   height: 100%;
+  z-index: 4;
 }
 
 .pic-fullscreen-prev:hover,
